<resources>
    <string name="app_name">Dapurly</string>
    <string name="lbl_beranda">Beranda</string>
    <string name="lbl_4_9_12">4,9 (12)</string>
    <string name="msg_tips_membuat_na3">Tips membuat nasi goreng
Gunakan nasi pera, jangan pakai nasi yg lembek, sebanyak apapun bumbunya rasanya tetap.......</string>
    <string name="lbl_cabai_merah">Cabai Merah</string>
    <string name="msg_terima_kasih_re">Terima kasih resepnya, mertua saya jadi doyan masakan saya..</string>
    <string name="lbl_30">30</string>
    <string name="msg_apa_yang_ingin">Apa yang ingin kamu makan dihari ini?</string>
    <string name="msg_cari_resep_favo">Cari resep favorit</string>
    <string name="lbl_level_silver">Level Silver</string>
    <string name="lbl_mulai_memasak2">Mulai Memasak</string>
    <string name="lbl_1_orang">1 Orang</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_26">26</string>
    <string name="lbl_29">29</string>
    <string name="lbl_2_siung">2 siung</string>
    <string name="msg_ayam_goreng_men">Ayam Goreng Mentega</string>
    <string name="msg_roti_jala_mak_l">Roti Jala Mak Lima Biadab</string>
    <string name="lbl_porsi_1_orang">Porsi 1 orang</string>
    <string name="lbl_favorite_saya">Favorite Saya</string>
    <string name="lbl_01">01</string>
    <string name="lbl_02">02</string>
    <string name="msg_buat_resepmu_se">Buat Resepmu Sendiri</string>
    <string name="lbl_bawang_putih">Bawang Putih</string>
    <string name="lbl_nasi">Nasi</string>
    <string name="lbl_orang_dewasa">Orang Dewasa</string>
    <string name="msg_kamu_bisa_mengu">Kamu bisa mengubah menu jika tidak sesuai dengan yang kamu inginkan</string>
    <string name="lbl3">:::::</string>
    <string name="lbl_isi_survei">Isi Survei</string>
    <string name="lbl_10_buah">10 buah</string>
    <string name="lbl_1_siung">1 siung</string>
    <string name="lbl_level_bronze">Level Bronze</string>
    <string name="msg_6_68_g_27_65_g">6,68 g
27,65 g
2,97 g
0,9 g
324 mg</string>
    <string name="lbl_lanjut">Lanjut</string>
    <string name="msg_halo_selamat_d">Halo, Selamat Datang</string>
    <string name="lbl_pilih_menu">Pilih Menu</string>
    <string name="lbl_5">5</string>
    <string name="msg_apa_bahan_masak">Apa bahan masak yang kamu sukai?</string>
    <string name="lbl_keju">Keju</string>
    <string name="msg_berapa_orang_ya">Berapa orang yang akan makan?</string>
    <string name="lbl_j">J</string>
    <string name="lbl_m">M</string>
    <string name="lbl_r">R</string>
    <string name="lbl_s">S</string>
    <string name="msg_resep_pilihan_s2">Resep Pilihan Spesal Untukmu</string>
    <string name="lbl_joko_idaman">Joko Idaman</string>
    <string name="msg_resep_lain_dari">Resep Lain Dari Penulis Ini</string>
    <string name="lbl_arnold_purnomo">Arnold Purnomo</string>
    <string name="lbl_justinb">JustinB</string>
    <string name="lbl_hari_ini">Hari Ini</string>
    <string name="lbl_dapur_budi2">Dapur Budi</string>
    <string name="msg_resep_pilihan_s">Resep Pilihan Spesial Untuk Kamu</string>
    <string name="msg_tambahkan_menu">Tambahkan menu resep olahanmu sendiri untuk diakses nanti</string>
    <string name="msg_apa_bahan_masak2">Apa bahan masak yang tidak kamu sukai?</string>
    <string name="lbl_lihat_semua">Lihat Semua</string>
    <string name="lbl_tambah_menu">Tambah Menu</string>
    <string name="lbl_sinta_adinda">Sinta Adinda</string>
    <string name="lbl_bahan_utama">Bahan Utama</string>
    <string name="msg_bebek_goreng_te">Bebek Goreng Tepung</string>
    <string name="lbl_anak_anak">Anak-Anak</string>
    <string name="msg_rekomendasi_men2">Rekomendasi Menu Untukmu</string>
    <string name="lbl_ikuti">Ikuti</string>
    <string name="lbl_resep_lainnya">Resep Lainnya</string>
    <string name="msg_informasi_nilai">Informasi Nilai Gizi : 166 kkal</string>
    <string name="msg_olahan_ayam_kec">Olahan Ayam Kecap Pedas</string>
    <string name="lbl_resep">Resep</string>
    <string name="lbl_selengkapnya">Selengkapnya</string>
    <string name="msg_protein_karbohi">Protein
Karbohidrat
Lemak
Serat
Natrium</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="serach_favorite">Cari resep Favorite</string>
    <string name="lbl_menu_bulking">Menu Bulking</string>
    <string name="lbl_ulasan_pengguna">Ulasan Pengguna</string>
    <string name="msg_untuk_penawaran">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="lbl_rice_cooker">Rice Cooker</string>
    <string name="lbl_bawang_merah">Bawang Merah</string>
    <string name="lbl_tanpa_presto">Tanpa Presto</string>
    <string name="lbl_5_15">5 (15)</string>
    <string name="msg_kami_memiliki_r">Kami memiliki rekomendasi menu untukmu hari ini</string>
    <string name="lbl_favorit">Favorit</string>
    <string name="msg_nasi_goreng_uda">Nasi Goreng Udang Khas Pak Budi</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_rekomendasi_men">Rekomendasi Menu Hari Ini</string>
    <string name="msg_hewan_peliharaa">Hewan Peliharaan</string>
    <string name="msg_pantangan_makan">Pantangan makanan /alergi / diet</string>
    <string name="msg_pengen_tau_lebi">Pengen tau lebih dalam tentang kamu nih, yuk isi survei singkat berikut ini</string>
    <string name="TitleSurveyEight">Alat masak apa yang tidak kamu miliki?</string>
    <string name="SubTitleSurveyEight">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="SurveyEight_1">Bebas Susu</string>
    <string name="SurveyEight_2">Bebas Gluten</string>
    <string name="SurveyEight_3">Bebas Babi</string>
    <string name="SurveyEight_4">Vegan</string>
    <string name="SurveyEight_5">Vegetarian</string>
    <string name="SurveyEight_6">Pescatarian</string>
    <string name="title_activity_survey_seven">SurveySeven</string>
    <string name="TitleSurveyNine">Tujuan Apa Yang Ingin Kamu Capai </string>
    <string name="SubTitleSurveyNine">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="SurveyNine_1">Wajan</string>
    <string name="SurveyNine_2">Sepatula</string>
    <string name="SurveyNine_3">Panci</string>
    <string name="SurveyNine_4">Blender</string>
    <string name="SurveyNine_5">Oven</string>
    <string name="SurveyNine_6">Pengasap</string>
    <string name="SurveyNine_7">Whisk</string>
    <string name="SurveyNine_8">Penjepit</string>
    <string name="SurveyNine_9">Presto</string>
    <string name="SurveyNine_10">Lainnya</string>
    <string name="TitleSurveyEleven">Berapa kali Anda makan dalam sehari? </string>
    <string name="SubTitleSurveyEleven">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="SurveyEleven_1">2 kali sehari</string>
    <string name="SurveyEleven_2">3 kali sehari</string>
    <string name="SurveyEleven_3">4 kali sehari</string>
    <string name="SurveyEleven_4">5 kali sehari atau lebih</string>
    <string name="TitleSurveyLenguage">Kamu Suka Makanan Khas Negara Mana? </string>
    <string name="SubTitleSurveyLenguage">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="SurveyLenguage_1">2 kali sehari</string>
    <string name="SurveyLenguage_2">3 kali sehari</string>
    <string name="SurveyLenguage_3">4 kali sehari</string>
    <string name="SurveyLenguage_4">5 kali sehari atau lebih</string>
    <string name="TitleSurveyBudget">Masukkan Budget Tiap Minggu Kamu</string>
    <string name="SubTitleSurveyBudget">Untuk penawaran resep terbaik, kami membutuhkan informasi mengenai kamu nih</string>
    <string name="SurveyBudgetBudget">Masukkan Budgetmu Per Minggunya</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">Masuk</string>
    <string name="Sub_activity_Login">Masuk dengan username dan password atau sosial media kamu</string>
    <string name="input_name_login">Nama Pengguna / Email</string>
    <string name="input_passoword_login">Kata Sandi</string>
    <string name="forget_password">Lupa Kata Sandi</string>
    <string name="button_login">Masuk</string>
    <string name="login_with">atau masuk menggunakan</string>
    <string name="login_with_google">Google</string>
    <string name="register_akun">Belum memiliki akun? Daftar sekarang</string>
    <string name="title_activity_register">Daftar</string>
    <string name="register_name">name</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="register_button">Daftar</string>
    <string name="validasi_register">dengan menekan Daftar, kamu menyetujui Syarat dan Ketentuan, Kebijakan Privasi</string>
    <string name="have_account">Sudah memiliki akun? Masuk Disini</string>
</resources>