<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/groupStylewhite_A700cornerRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageImageSixteen"
            android:layout_width="@dimen/_234pxh"
            android:layout_height="@dimen/_114pxh"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_image16" />

        <LinearLayout
            android:id="@+id/linearColumnvector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_16pxv"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearRowjokoidaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageImageSeventeen"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/img_image17" />

                <LinearLayout
                    android:id="@+id/linearColumnjokoidaman"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_weight="0.74"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtJokoIdaman"
                        style="@style/txtPoppinsmedium12_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_joko_idaman" />

                    <TextView
                        android:id="@+id/txtLevelBronze"
                        style="@style/txtPoppinsregular8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_level_bronze" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageVector"
                    android:layout_width="@dimen/_12pxh"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_yellow_701"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_vector_yellow_701" />

                <TextView
                    android:id="@+id/txtFive"
                    style="@style/txtPoppinsmedium16_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_weight="0.05"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_5" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTerimakasihre"
                style="@style/txtPoppinsregular12_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:text="@string/msg_terima_kasih_re" />
        </LinearLayout>
    </LinearLayout>
</layout>
